added Tablet and Desktop layout

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <p class="relationship">OF OUR RELATIONSHIP WITH SPACES</p>
   </header>
   <div class="main-container">
-    <p id="pg1">HOW DO <span>YOU</span> DEFINE AND CHANGE YOUR RELATIONSHIPS TO PLACES? UNDERSTAND WHERE
+    <p id="pg1">HOW DO <span>YOU</span> DEFINE AND CHANGE YOUR RELATIONSHIPS TO PLACES?<br><br>UNDERSTAND WHERE
       <span>YOU</span> ARE IN RELATION
-      TO OTHER PLACES? HOW DO <span>YOU</span> UNDERSTAND THE PLACE <span>YOU</span> ARE IN? HOW DO <span>YOU</span>
-      KNOW WHERE <span>YOU</span> ARE? SIGNAL WHERE <span>YOU</span>
+      TO OTHER PLACES?<br><br>HOW DO <span>YOU</span> UNDERSTAND THE PLACE <span>YOU</span> ARE IN?<br><br>HOW DO
+      <span>YOU</span>
+      KNOW WHERE <span>YOU</span> ARE?<br><br>SIGNAL WHERE <span>YOU</span>
       ARE?
     </p>
     <img id="ph1" src="assets/Space.jpg"></img>
@@ -37,30 +38,32 @@
       IMAGINATION,
       INNOVATION, AND INTERACTIVITY.</p>
     <img id="ph3" src="assets/Haven.jpg"></img>
-    <p id="pg4">TECH GIANTS LIKE <span>APPLE</span> ARE PUSHING THE BOUNDARIES OF WHAT IS POSSIBLE IN TERMS OF
+    <p class="longpg" id="pg4">TECH GIANTS LIKE <span>APPLE</span> ARE PUSHING THE BOUNDARIES OF WHAT IS POSSIBLE IN
+      TERMS OF
       SPATIAL
       COMPUTING, AUGMENTED REALITY (AR), AND LOCATION-BASED SERVICES.</p>
-    <img id="ph4" src="assets/Apple.jpg"></img>
-    <p id="pg5">THE <span>APPLE VISION PRO</span> IS A HIGH-END VIRTUAL REALITY (VR) AND AUGMENTED REALITY (AR)
+    <img class="longph" id="ph4" src="assets/Apple.jpg"></img>
+    <p class="longpg" id="pg5">THE <span>APPLE VISION PRO</span> IS A HIGH-END VIRTUAL REALITY (VR) AND AUGMENTED
+      REALITY (AR)
       HEADSET THAT
       WAS ANNOUNCED BY APPLE IN JUNE 2023. IT FEATURES TWO ULTRA-HIGH-RESOLUTION DISPLAYS, A POWERFUL PROCESSOR, AND A
       VARIETY OF SENSORS THAT ALLOW FOR IMMERSIVE EXPERIENCES. THE <span>APPLE VISION PRO</span> IS A POWERFUL VR AND
       AR HEADSET
       THAT IS CAPABLE OF DELIVERING IMMERSIVE EXPERIENCES. IT IS STILL IN DEVELOPMENT, BUT IT HAS THE POTENTIAL TO
       REVOLUTIONIZE THE WAY WE INTERACT WITH TECHNOLOGY.</p>
-    <img id="ph5" src="assets/Vision.jpg"></img>
-    <p id="pg6">THIS TECHNOLOGY STILL HAS THE CAPACITY TO GROW IN THE FUTURE, POSSIBLY LEADING TO ONE
-      RESEMBLING THAT FOUND IN THE 2016 SHORT FILM "<span>HYPER-REALITY</span>", DIRECTED BY KEIICHI MATSUDA. THE FILM
-      EXPLORES A
-      FUTURE WHERE AUGMENTED REALITY HAS BECOME AN INTEGRAL PART OF DAILY LIFE. THE PROTAGONIST WEARS AR GLASSES THAT
-      OVERLAY DIGITAL INFORMATION AND VIRTUAL OBJECTS ONTO THE PHYSICAL WORLD. THROUGHOUT THE FILM, THE PROTAGONIST
-      ENCOUNTERS A SERIES OF SURREAL AND CHAOTIC SCENES. DIGITAL ADVERTISEMENTS AND INFORMATION CONSTANTLY BOMBARD THE
-      PROTAGONIST'S VISION, CREATING A SENSE OF INFORMATION OVERLOAD.
+    <img class="longph" id="ph5" src="assets/Vision.jpg"></img>
+    <p class="longpg2" id="pg6">THIS TECHNOLOGY STILL HAS THE CAPACITY TO GROW IN THE FUTURE, POSSIBLY LEADING TO ONE
+      RESEMBLING THAT
+      FOUND IN THE 2016 SHORT FILM "<span>HYPER-REALITY</span>". THE FILM EXPLORES A FUTURE WHERE AUGMENTED REALITY HAS
+      BECOME AN
+      INTEGRAL PART OF DAILY LIFE BY WIDE ADOPTION OF AR VISION. DIGITAL ADVERTISEMENTS AND INFORMATION CONSTANTLY
+      BOMBARD THE PROTAGONIST'S VISION, CREATING A SENSE OF INFORMATION OVERLOAD.
     </p>
     <iframe id="v1" src="https://www.youtube.com/embed/YJg02ivYzSs" frameborder="0"
       allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       allowfullscreen></iframe>
-    <p id="pg7">THERE IS ALSO THE EVER-PRESENT CHANCE OF THE <span>METAVERSE</span> BEING WIDELY ADOPTED, WHICH
+    <p class="longpg2" id="pg7">THERE IS ALSO THE EVER-PRESENT CHANCE OF THE <span>METAVERSE</span> BEING WIDELY
+      ADOPTED, WHICH
       COULD
       POTENTIALLY BRING ABOUT NOTABLE CHANGES IN HOW WE INTERACT WITH DIGITAL ENVIRONMENTS AND REDEFINE VARIOUS
       ASPECTS OF WORK, COMMUNICATION, AND LEISURE. META PROMISES THIS WOULD PROVIDE AN IMMERSIVE NATURE THAT OFFERS
