necro (added transition)

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
 
   <header>
-    <p class="future">THE FUTURE</p>
-    <p class="relationship">OF OUR RELATIONSHIP WITH SPACES</p>
+    <div class="header">
+      <p class="future">THE FUTURE</p>
+      <p class="relationship">OF OUR RELATIONSHIP WITH SPACES</p>
+    </div>
   </header>
   <div class="main-container">
     <p id="pg1">HOW DO <span>YOU</span> DEFINE AND CHANGE YOUR RELATIONSHIPS TO PLACES?<br><br>UNDERSTAND WHERE
